DOMA-6021 call records log (#3437)
* feat(condo): DOMA-6020 added CallRecord and CallRecortTicket schemas

* feat(condo): DOMA-6020 added ActiveCallContext and CondoWebSetActiveCall event

* feat(condo): DOMA-6020 added attachCallRecord checkbox to ticket form

* feat(condo): DOMA-6020 attach record to ticket

* feat(condo): DOMA-6020 rename CallRecordTicket to CallRecordFragment

* fix(telephony-integration): DOMA-6020 fix file attachment

* feat(condo): DOMA-6020 attach ticket organization

* feat(condo): DOMA-6020 added startedAt to CallRecordFragment

* feat(condo): DOMA-6020 added phone normalization to CallRecord

* feat(condo): DOMA-6020 added GQL errors to CallRecord schema

* fix(condo): DOMA-6020 fixes after review

* feat(condo): DOMA-6021 added TicketCallRecordHistory and AudioPlayer components

* feat(condo): DOMA-6021 call record page

* feat(condo): DOMA-6021 added links to phones and emails

* fix(condo): DOMA-6021 fixes after review

* fix(ui): DOMA-5702 made label ReactNode

* fix(condo): DOMA-6021 fixes after review

* fix(condo): DOMA-6021 async wavesurfer import

* fix(icons): DOMA-6021 fix phone icon

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -176,6 +176,35 @@
   "Now": "Now",
   "MobileAppResident": "Resident app",
   "PushNotification": "Push-notification",
+  "callRecord.index.title": "Call records log",
+  "callRecord.index.emptyList.title": "No calls yet",
+  "callRecord.index.emptyList.description": "Records will show up when someone calls you or you call you",
+  "callRecord.table.column.startedAt": "Date and time",
+  "callRecord.table.column.phone": "Phone number",
+  "callRecord.table.column.callType": "Call type",
+  "callRecord.table.column.talkTime": "Talk time",
+  "callRecord.table.column.client": "Client",
+  "callRecord.table.column.ticketNumber": "Ticket number",
+  "callRecord.table.column.record": "Call record",
+  "callRecord.filters.startDate": "Start",
+  "callRecord.filters.endDate": "End",
+  "callRecord.callType.incoming": "Incoming",
+  "callRecord.callType.outgoing": "Outgoing",
+  "callRecord.call": "Call",
+  "callRecord.modal.emptyClient": "No data of this contact",
+  "callRecord.modal.emptyAddress": "No address",
+  "callRecord.modal.attachTicketsToCall": "Attach tickets to call",
+  "callRecord.modal.attachTicketsToCall.placeholder": "Select one or more ticket numbers",
+  "callRecord.modal.detachTickets.title": "Detach tickets?",
+  "callRecord.modal.detachTickets.description": "If you attach tickets to a call, it will be easier to search the system for information",
+  "callRecord.playRecord": "Play call record",
+  "callRecord.downloadRecord": "Download call record",
+  "callRecord.savedNotification.message": "Call saved",
+  "callRecord.savedNotification.description": "Call record saved in",
+  "callRecord.savedNotification.descriptionLink": "call records log",
+  "callRecord.saveErrorNotification.message": "Call not saved",
+  "callRecord.saveErrorNotification.description": "An error occurred while saving the call",
+  "global.Attach": "Attach",
   "global.checkAll": "Check all",
   "global.actualUntil": "Actual until",
   "global.section.accrualsAndPayments": "Accruals and payments",
@@ -193,6 +222,7 @@
   "global.section.miniapps": "Services",
   "global.section.newsItems": "News",
   "global.section.SPP": "Payments from individuals",
+  "global.duration.seconds.short": "s.",
   "global.available": "Available",
   "global.notAvailable": "Not available",
   "global.contractor": "{isSingular, plural, other {Contractors} one {Contractor}}",
@@ -624,7 +654,8 @@
   "pages.condo.ticket.favorite.addToFavorite": "Add to favorite",
   "pages.condo.ticket.favorite.removeFromFavorite": "Remove from favorite",
   "pages.condo.ticket.field.EmployeeIsNullOrWasDeleted": "Employee is not specified or has been deleted",
-  "pages.condo.ticket.field.CanReadByResident": "display ticket in mobile resident app",
+  "pages.condo.ticket.field.AttachCallRecord": "Attach current call to ticket",
+  "pages.condo.ticket.field.CanReadByResident": "Display ticket in mobile resident app",
   "pages.condo.ticket.field.ResidentClient": "Client (resident)",
   "pages.condo.ticket.field.NotResidentClient": "Client (not resident)",
   "pages.condo.ticket.field.Description": "Problem description",
@@ -728,6 +759,7 @@
   "pages.condo.ticket.warning.modal.Title": "Do not save ticket?",
   "pages.condo.ticket.warning.modal.HelpMessage": "Ticket will not be saved if you leave the page.",
   "pages.condo.ticket.title.TicketChanges": "Change log of the ticket",
+  "pages.condo.ticket.title.CallRecordsHistory": "Call records history",
   "pages.condo.ticket.title.TicketFromResident": "Ticket from resident",
   "pages.condo.ticket.title.TicketNotFromResident": "Ticket not from resident",
   "pages.condo.ticket.title.MeterReadingsFromResident": "Meter readings from resident",
@@ -953,6 +985,7 @@
   "pages.organizations.tin.InvalidValue": "TIN field value is not valid",
   "pages.organizations.PageTitle": "Organizations",
   "pages.clientCard.Title": "Contact {phone}",
+  "pages.clientCard.callRecordsLog": "Call records log",
   "pages.clientCard.showAllPropertyTickets": "Show all tickets at this property",
   "pages.clientCard.contactTickets": "Contact tickets at this address",
   "pages.clientCard.editContact": "Edit contact",
@@ -1355,6 +1388,12 @@
   "TicketAssignment": "Application assignment",
   "ticketsTable.Number": "№",
   "ticketsTable.ResidentName": "Resident Name",
+  "ticket.callRecord.attachCallRecordToTicket": "You can attach this call to the ticket",
+  "ticket.callRecord.attachCallRecordToTicket.notification.message": "The call is attached to the ticket",
+  "ticket.callRecord.attachCallRecordToTicket.notification.description": "Conversation record saved in ticket card",
+  "ticket.callRecord.incomingCall": "Incoming call from {phone}",
+  "ticket.callRecord.outgoingCall": "Outgoing call for {phone}",
+  "ticket.callRecord.speed": "Speed",
   "ticket.newResidentComment": "New resident comment",
   "ticket.feedback": "Resident feedback",
   "ticket.feedback.filter.label": "Resident feedback",
@@ -1710,6 +1749,7 @@
   "api.organization.reInviteOrganizationEmployee.USER_NOT_FOUND": "Could not find user using specified contacts",
   "api.organization.reInviteOrganizationEmployee.EMPLOYEE_NOT_FOUND": "Could not employee using specified contacts",
   "api.organization.reInviteOrganizationEmployee.ALREADY_ACCEPTED_INVITATION": "Specified employee has already accepted invitation",
+  "api.common.INVALID_PHONE_NUMBER_FORMAT": "Invalid phone number format",
   "api.banking.createBankAccountRequest.INCORRECT_PROPERTY_ID": "Incorrect propertyId was provided. Please check that this id related to passed organizationId",
   "api.incident.WORK_FINISHED_EARLIER_THEN_WORK_STARTED": "The end of the work cannot be earlier than the start",
   "api.incident.WORK_FINISH_MUST_BE_SPECIFIED_IF_NOT_ACTUAL_STATUS": "The end of the work should be specified if the incident has status not actual",
@@ -1721,6 +1761,10 @@
   "api.newsItem.VALIDITY_DATE_LESS_THAN_SEND_DATE": "The validity date is less than send date",
   "api.newsItem.PROFANITY_DETECTED_MOT_ERF_KER": "Profanity detected",
   "api.newsItem.WRONG_SEND_DATE": "Wrong send date",
+  "api.newsItem.EMPTY_NEWS_ITEM_SCOPE": "Empty scope",
+  "api.newsItem.UNIT_NAME_WITHOUT_UNIT_TYPE": "Unit name set without unit type",
+  "api.callRecord.NEGATIVE_TALK_TIME": "Talk time must be greater or equal than 0",
+  "api.callRecordFragment.INVALID_TICKET_ORGANIZATION": "Ticket must be from the same organization as call record",
   "api.newsItem.NO_NEWS_ITEM_SCOPES": "Scope-less news item publishing is forbidden",
   "api.ticket.QUALITY_CONTROL_ADDITIONAL_OPTION_DOES_NOT_MATCH_QUALITY_CONTROL_VALUE": "Additional quality control parameters must match the specified scoring",
   "api.ticket.QUALITY_CONTROL_VALUE_MUST_BE_SPECIFIED": "When specifying a comment or additional evaluation parameters, you must specify the evaluation itself",
