--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -176,6 +176,35 @@
   "Now": "Сейчас",
   "MobileAppResident": "Приложение жителя",
   "PushNotification": "Push-уведомления",
+  "callRecord.index.title": "Журнал звонков",
+  "callRecord.index.emptyList.title": "Пока звонков нет",
+  "callRecord.index.emptyList.description": "Записи появятся, когда кто-то позвонит вам или вы позвоните",
+  "callRecord.table.column.startedAt": "Дата и время",
+  "callRecord.table.column.phone": "Номер телефона",
+  "callRecord.table.column.callType": "Тип звонка",
+  "callRecord.table.column.talkTime": "Длительность",
+  "callRecord.table.column.client": "Заявитель",
+  "callRecord.table.column.ticketNumber": "Номер заявки",
+  "callRecord.table.column.record": "Запись звонка",
+  "callRecord.filters.startDate": "Начало периода",
+  "callRecord.filters.endDate": "Конец периода",
+  "callRecord.callType.incoming": "Входящий",
+  "callRecord.callType.outgoing": "Исходящий",
+  "callRecord.call": "Звонок",
+  "callRecord.modal.emptyClient": "Нет данных по этому контакту",
+  "callRecord.modal.emptyAddress": "Нет адреса",
+  "callRecord.modal.attachTicketsToCall": "Прикрепить заявки к звонку",
+  "callRecord.modal.attachTicketsToCall.placeholder": "Выберите один или несколько номеров заявок",
+  "callRecord.modal.detachTickets.title": "Открепить заявки?",
+  "callRecord.modal.detachTickets.description": "Если прикрепить заявки к звонку, искать информацию в системе будет легче",
+  "callRecord.playRecord": "Воспроизвести аудиозапись звонка",
+  "callRecord.downloadRecord": "Скачать аудиозапись звонка",
+  "callRecord.savedNotification.message": "Звонок сохранен",
+  "callRecord.savedNotification.description": "Запись разговора сохранена в",
+  "callRecord.savedNotification.descriptionLink": "журнале звонков",
+  "callRecord.saveErrorNotification.message": "Звонок не сохранен",
+  "callRecord.saveErrorNotification.description": "Во время сохранения звонка произошла ошибка",
+  "global.Attach": "Прикрепить",
   "global.checkAll": "Выбрать все",
   "global.actualUntil": "Актуально до",
   "global.section.accrualsAndPayments": "Начисления и оплаты",
@@ -193,6 +222,7 @@
   "global.section.miniapps": "Сервисы",
   "global.section.newsItems": "Новости",
   "global.section.SPP": "Платежи от физлиц",
+  "global.duration.seconds.short": "сек.",
   "global.available": "Есть",
   "global.notAvailable": "Отсутствует",
   "global.contractor": "{isSingular, plural, other {Контрагенты} one {Контрагент}}",
@@ -624,7 +654,8 @@
   "pages.condo.ticket.favorite.addToFavorite": "Добавить в избранное",
   "pages.condo.ticket.favorite.removeFromFavorite": "Убрать из избранного",
   "pages.condo.ticket.field.EmployeeIsNullOrWasDeleted": "Сотрудник не указан или был удален",
-  "pages.condo.ticket.field.CanReadByResident": "отображать заявку в моб. приложении жителя",
+  "pages.condo.ticket.field.AttachCallRecord": "Прикрепить текущий звонок к заявке",
+  "pages.condo.ticket.field.CanReadByResident": "Отображать заявку в моб. приложении жителя",
   "pages.condo.ticket.field.ResidentClient": "Заявитель (житель)",
   "pages.condo.ticket.field.NotResidentClient": "Заявитель (не житель)",
   "pages.condo.ticket.field.Description": "Проблема",
@@ -728,6 +759,7 @@
   "pages.condo.ticket.warning.modal.Title": "Не сохранять заявку?",
   "pages.condo.ticket.warning.modal.HelpMessage": "Заявка не сохранится, если вы уйдете со страницы.",
   "pages.condo.ticket.title.TicketChanges": "История изменений заявки",
+  "pages.condo.ticket.title.CallRecordsHistory": "История звонков по заявке",
   "pages.condo.ticket.title.TicketFromResident": "Заявка от жителя",
   "pages.condo.ticket.title.TicketNotFromResident": "Заявка не от жителя",
   "pages.condo.ticket.title.MeterReadingsFromResident": "Показания от жителя",
@@ -953,7 +985,8 @@
   "pages.organizations.tin.InvalidValue": "Некорректное значение ИНН",
   "pages.organizations.PageTitle": "Организации",
   "pages.clientCard.Title": "Контакт {phone}",
-  "pages.clientCard.showAllPropertyTickets": "Показать все заявки по этому дому",
+  "pages.clientCard.callRecordsLog": "История звонков",
+  "pages.clientCard.showAllPropertyTickets": "Все заявки по этому адресу",
   "pages.clientCard.contactTickets": "Заявки контакта по этому адресу",
   "pages.clientCard.editContact": "Редактировать контакт",
   "pages.clientCard.addAddress": "Добавить адрес",
@@ -1355,6 +1388,12 @@
   "TicketAssignment": "Назначение заявки",
   "ticketsTable.Number": "№",
   "ticketsTable.ResidentName": "Фио Жителя",
+  "ticket.callRecord.attachCallRecordToTicket": "Вы можете прикрепить этот звонок к заявке",
+  "ticket.callRecord.attachCallRecordToTicket.notification.message": "Звонок прикреплен к заявке",
+  "ticket.callRecord.attachCallRecordToTicket.notification.description": "Запись разговора сохранена в карточке заявки",
+  "ticket.callRecord.incomingCall": "Входящий звонок с номера {phone}",
+  "ticket.callRecord.outgoingCall": "Исходящий звонок на номер {phone}",
+  "ticket.callRecord.speed": "Скорость",
   "ticket.newResidentComment": "Новый комментарий жителя",
   "ticket.feedback": "Оценка жителя",
   "ticket.feedback.filter.label": "Контроль качества",
@@ -1710,6 +1749,7 @@
   "api.organization.reInviteOrganizationEmployee.USER_NOT_FOUND": "Не найден пользователь по указанным контактам",
   "api.organization.reInviteOrganizationEmployee.EMPLOYEE_NOT_FOUND": "Не найден сотрудник по указанным контактам",
   "api.organization.reInviteOrganizationEmployee.ALREADY_ACCEPTED_INVITATION": "Указанный сотрудник уже принял приглашение",
+  "api.common.INVALID_PHONE_NUMBER_FORMAT": "Некорректный формат номера телефона",
   "api.banking.createBankAccountRequest.INCORRECT_PROPERTY_ID": "Неверное значение propertyId. Данный дом не принадлежит выбранной организации",
   "api.incident.WORK_FINISHED_EARLIER_THEN_WORK_STARTED": "Окончание работ не может быть раньше начала",
   "api.incident.WORK_FINISH_MUST_BE_SPECIFIED_IF_NOT_ACTUAL_STATUS": "Окончание работ не может быть пустым, если отключение имеет статус \"неактуально\"",
@@ -1721,6 +1761,10 @@
   "api.newsItem.VALIDITY_DATE_LESS_THAN_SEND_DATE": "Дата актуальности меньше чем дата отправки",
   "api.newsItem.PROFANITY_DETECTED_MOT_ERF_KER": "Обнаружена ненормативная лексика",
   "api.newsItem.WRONG_SEND_DATE": "Неверная дата отправки",
+  "api.newsItem.EMPTY_NEWS_ITEM_SCOPE": "Не указаны получатели",
+  "api.newsItem.UNIT_NAME_WITHOUT_UNIT_TYPE": "Не задан unitName без unitType",
+  "api.callRecord.NEGATIVE_TALK_TIME": "Длительность разговора должна быть больше или равна 0",
+  "api.callRecordFragment.INVALID_TICKET_ORGANIZATION": "Заявка должна быть из той же организации, что и запись разговора",
   "api.newsItem.NO_NEWS_ITEM_SCOPES": "Нельзя публиковать новость без получателей",
   "api.ticket.QUALITY_CONTROL_ADDITIONAL_OPTION_DOES_NOT_MATCH_QUALITY_CONTROL_VALUE": "Дополнительные параметры контроля качества должны соответсоввать указанной оценке",
   "api.ticket.QUALITY_CONTROL_VALUE_MUST_BE_SPECIFIED": "При указании комментария или дополнительных параметров оценки нужно указать саму оценку",
