feat(condo): DOMA-6435 trim listing of units and sections (#3503)

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1267,8 +1267,10 @@
   "news.component.RecipientCounter.toResidentsInProperties": " to addresses: {addressList}{andMore}}",
   "news.component.RecipientCounter.toResidentsInProperties.andMore": " and more {count} addresses",
   "news.component.RecipientCounter.toResidentsInPropertySection": " to section {section} at {address}",
-  "news.component.RecipientCounter.toResidentsInPropertySections": " to sections {sections} at {address}",
-  "news.component.RecipientCounter.toResidentsInPropertyUnits": " to units {unitNames} at {address}",
+  "news.component.RecipientCounter.toResidentsInPropertySections": " to sections {sections}{andMore} at {address}",
+  "news.component.RecipientCounter.toResidentsInPropertySections.andMore": " and more {count} sections",
+  "news.component.RecipientCounter.toResidentsInPropertyUnits": " to units {unitNames}{andMore} at {address}",
+  "news.component.RecipientCounter.toResidentsInPropertyUnits.andMore": " and more {count} units",
   "notification.messages.MESSAGE_FORWARDED_TO_SUPPORT.email.subject": "Message from mobile application",
   "notification.messages.DIRTY_INVITE_NEW_EMPLOYEE_SMS.email.subject": "You are invited to join organization as employee",
   "notification.messages.DIRTY_INVITE_NEW_EMPLOYEE_SMS.push.title": "You are invited to join organization as employee",
