--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1267,8 +1267,10 @@
   "news.component.RecipientCounter.toResidentsInProperties": " по адресам: {addressList}{andMore}",
   "news.component.RecipientCounter.toResidentsInProperties.andMore": " и ещё {count, plural, one {# адрес} few {# адреса} other {# адресов}}",
   "news.component.RecipientCounter.toResidentsInPropertySection": " по подъезду {section} по адресу {address}",
-  "news.component.RecipientCounter.toResidentsInPropertySections": " по подъездам {sections} по адресу {address}",
-  "news.component.RecipientCounter.toResidentsInPropertyUnits": " по помещениям {unitNames} по адресу {address}",
+  "news.component.RecipientCounter.toResidentsInPropertySections": " по подъездам {sections}{andMore} по адресу {address}",
+  "news.component.RecipientCounter.toResidentsInPropertySections.andMore": " и ещё {count, plural, one {# подъезд} few {# подъезда} other {# подъездов}}",
+  "news.component.RecipientCounter.toResidentsInPropertyUnits": " по помещениям {unitNames}{andMore} по адресу {address}",
+  "news.component.RecipientCounter.toResidentsInPropertyUnits.andMore": " и ещё {count, plural, one {# помещение} few {# помещения} other {# помещений}}",
   "notification.messages.MESSAGE_FORWARDED_TO_SUPPORT.email.subject": "Обращение из мобильного приложения",
   "notification.messages.DIRTY_INVITE_NEW_EMPLOYEE_SMS.email.subject": "Вас пригласили присоединиться к организации в качестве сотрудника",
   "notification.messages.DIRTY_INVITE_NEW_EMPLOYEE_SMS.push.title": "Вас пригласили присоединиться к организации в качестве сотрудника",
