feat(condo): DOMA-6442 added error display for profanity (#3509)

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1081,6 +1081,8 @@
   "news.fields.validBefore.error": "Time for sending news does not match the validBefore. Change the validBefore to send the news.",
   "news.fields.toManyMessages.error": "We recommend sending no more than five news per day so as not to bore residents. It is better to postpone sending it until tomorrow.",
   "news.fields.templates": "Templates",
+  "news.fields.profanityInTitle.error": "Profanity in title detected",
+  "news.fields.profanityInBody.error": "Profanity in body detected",
   "news.type.common": "Common",
   "news.type.emergency": "Еmergency",
   "news.createNews": "Add news",
@@ -1761,7 +1763,8 @@
   "api.newsItem.EDIT_DENIED_ALREADY_SENT": "You cannot edit the news item which already been sent",
   "api.newsItem.EDIT_DENIED_PUBLISHED": "You can not edit published news item",
   "api.newsItem.VALIDITY_DATE_LESS_THAN_SEND_DATE": "The validity date is less than send date",
-  "api.newsItem.PROFANITY_DETECTED_MOT_ERF_KER": "Profanity detected",
+  "api.newsItem.PROFANITY_TITLE_DETECTED_MOT_ERF_KER": "Profanity in title detected",
+  "api.newsItem.PROFANITY_BODY_DETECTED_MOT_ERF_KER": "Profanity in body detected",
   "api.newsItem.WRONG_SEND_DATE": "Wrong send date",
   "api.newsItem.EMPTY_NEWS_ITEM_SCOPE": "Empty scope",
   "api.newsItem.UNIT_NAME_WITHOUT_UNIT_TYPE": "Unit name set without unit type",
