--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1081,6 +1081,8 @@
   "news.fields.validBefore.error": "Время отправки новости не совпадает со сроком ее актуальности. Измените срок, чтобы отправить новость.",
   "news.fields.toManyMessages.error": "Мы рекомендуем отправлять не более 5 новостей в день, чтобы не докучать жителям. Лучше отложить отправку на завтра.",
   "news.fields.templates": "Шаблоны",
+  "news.fields.profanityInTitle.error": "В заголовке обнаружена ненормативная лексика",
+  "news.fields.profanityInBody.error": "В основном тексте обнаружена ненормативная лексика",
   "news.type.common": "Плановый",
   "news.type.emergency": "Аварийный",
   "news.createNews": "Добавить новость",
@@ -1761,7 +1763,8 @@
   "api.newsItem.EDIT_DENIED_ALREADY_SENT": "Нельзя редактировать уже отправленную новость",
   "api.newsItem.EDIT_DENIED_PUBLISHED": "Нельзя редактировать опубликованную новость",
   "api.newsItem.VALIDITY_DATE_LESS_THAN_SEND_DATE": "Дата актуальности меньше чем дата отправки",
-  "api.newsItem.PROFANITY_DETECTED_MOT_ERF_KER": "Обнаружена ненормативная лексика",
+  "api.newsItem.PROFANITY_TITLE_DETECTED_MOT_ERF_KER": "В заголовке обнаружена ненормативная лексика",
+  "api.newsItem.PROFANITY_BODY_DETECTED_MOT_ERF_KER": "В основном тексте обнаружена ненормативная лексика",
   "api.newsItem.WRONG_SEND_DATE": "Неверная дата отправки",
   "api.newsItem.EMPTY_NEWS_ITEM_SCOPE": "Не указаны получатели",
   "api.newsItem.UNIT_NAME_WITHOUT_UNIT_TYPE": "Не задан unitName без unitType",
