fix(condo): DOMA-6413 changed alert text in news removal (#3524)

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1358,7 +1358,8 @@
   "notification.messages.NEWS_ITEM_EMERGENCY_MESSAGE_TYPE.push.title": "{title}",
   "notification.messages.B2C_APP_MESSAGE_PUSH.push.title": "{title}",
   "news.ConfirmDeleteTitle": "Delete news?",
-  "news.ConfirmDeleteMessage": "The news will be permanently deleted.",
+  "news.ConfirmDeleteMessage": "It cannot be restored. But you can recreate it.",
+  "news.CancelMessage": "Keep",
   "TicketDeadline": "Ticket deadline",
   "TicketDeferredDeadline": "Ticket deferred deadline",
   "ticket.EmptyList.header": "The list of applications is still empty",
