--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1358,7 +1358,8 @@
   "notification.messages.NEWS_ITEM_EMERGENCY_MESSAGE_TYPE.push.title": "{title}",
   "notification.messages.B2C_APP_MESSAGE_PUSH.push.title": "{title}",
   "news.ConfirmDeleteTitle": "Удалить новость?",
-  "news.ConfirmDeleteMessage": "Новость будет удалена навсегда.",
+  "news.ConfirmDeleteMessage": "Восстановить ее будет нельзя. Но можно создать заново.",
+  "news.CancelMessage": "Оставить",
   "TicketDeadline": "Срок выполнения заявки",
   "TicketDeferredDeadline": "Срок отложенности заявки",
   "ticket.EmptyList.header": "Список заявок пока пуст",
