--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1063,6 +1063,8 @@
   "news.fields.sections.label": "Подъезд",
   "news.fields.sections.message": "Чтобы выбрать подъезды, удалите выбранные помещения",
   "news.fields.type.label": "Тип уведомления",
+  "news.fields.type.common": "плановое",
+  "news.fields.type.emergency": "аварийное",
   "news.fields.title.label": "Заголовок",
   "news.fields.title.placeholder": "Сформулируйте заголовок новости. Не начинайте с приветствия, а сразу переходите к сути: расскажите, что произошло, короткой фразой",
   "news.fields.body.label": "Основной текст",
