refactor(condo): DOMA-6156 Recipients counter (#3507)
* refactor(condo): DOMA-6156 Recipients counter

All calculations moved to custom mutation

* refactor(condo): DOMA-6156 input types were fixed

* refactor(condo): DOMA-6156 using of `useLazyQuery` instead of `runMutation` for receiving counters data

* refactor(condo): DOMA-6156 fix tests

* refactor(condo): DOMA-6156 variable was renamed

* fix(condo): DOMA-6156 Memory using optimization

* fix(condo): DOMA-6156 The specific code for counters and xls-export queries

* fix(condo): DOMA-6156 Tests was fixed

* fix(condo): DOMA-6156 News item recipients export task was moved to backend job

* fix(condo): DOMA-6156 Frontend for exporting of news item recipients

* fix(condo): DOMA-6156 The old ExportNewsRecipients mutation was removed

* fix(condo): DOMA-6156 Migrations were fixed

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1454,6 +1454,10 @@
   "tasks.TicketExportTask.progress.description.preparing": "Preparing for export",
   "tasks.TicketExportTask.progress.description.processing": "Tickets exported: {exported} from {total}",
   "tasks.TicketExportTask.progress.description.completed": "File has been created and downloaded was started",
+  "tasks.NewsItemRecipientsExportTask.progress.title": "Exporting news item recipients",
+  "tasks.NewsItemRecipientsExportTask.progress.description.preparing": "Preparing for export",
+  "tasks.NewsItemRecipientsExportTask.progress.description.processing": "Recipients exported: {exported} from {total}",
+  "tasks.NewsItemRecipientsExportTask.progress.description.completed": "File has been created and downloaded was started",
   "tasks.BankSyncTask.file.progress.title": "Importing transactions from file",
   "tasks.BankSyncTask.externalSystem.progress.title": "Importing transactions from SBBOL",
   "tasks.BankSyncTask.progress.description.preparing": "Preparing to import",
@@ -1763,6 +1767,8 @@
   "api.incident.WORK_FINISH_MUST_BE_SPECIFIED_IF_NOT_ACTUAL_STATUS": "The end of the work should be specified if the incident has status not actual",
   "api.incidentExportTask.STATUS_IS_ALREADY_COMPLETED": "Task already completed successfully",
   "api.incidentExportTask.STATUS_IS_ALREADY_ERROR": "The task has already completed with an error",
+  "api.newsItemRecipientsExportTask.STATUS_IS_ALREADY_COMPLETED": "Task already completed successfully",
+  "api.newsItemRecipientsExportTask.STATUS_IS_ALREADY_ERROR": "The task has already completed with an error",
   "api.newsItem.EMPTY_VALID_BEFORE_DATE": "Validity date is required",
   "api.newsItem.EDIT_DENIED_ALREADY_SENT": "You cannot edit the news item which already been sent",
   "api.newsItem.EDIT_DENIED_PUBLISHED": "You can not edit published news item",
