--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1454,6 +1454,10 @@
   "tasks.TicketExportTask.progress.description.preparing": "Подготовка к экспорту",
   "tasks.TicketExportTask.progress.description.processing": "Экспортированно записей: {exported} из {total}",
   "tasks.TicketExportTask.progress.description.completed": "Файл сформирован и будет автоматически сохранен в загрузках",
+  "tasks.NewsItemRecipientsExportTask.progress.title": "Выгрузка получателей новости",
+  "tasks.NewsItemRecipientsExportTask.progress.description.preparing": "Подготовка к экспорту",
+  "tasks.NewsItemRecipientsExportTask.progress.description.processing": "Экспортированно записей: {exported} из {total}",
+  "tasks.NewsItemRecipientsExportTask.progress.description.completed": "Файл сформирован и будет автоматически сохранен в загрузках",
   "tasks.BankSyncTask.file.progress.title": "Импорт транзакций из файла",
   "tasks.BankSyncTask.externalSystem.progress.title": "Импорт транзакций из СберБизнес",
   "tasks.BankSyncTask.progress.description.preparing": "Подготовка к импорту",
@@ -1763,6 +1767,8 @@
   "api.incident.WORK_FINISH_MUST_BE_SPECIFIED_IF_NOT_ACTUAL_STATUS": "Окончание работ не может быть пустым, если отключение имеет статус \"неактуально\"",
   "api.incidentExportTask.STATUS_IS_ALREADY_COMPLETED": "Задача уже успешно выполнена",
   "api.incidentExportTask.STATUS_IS_ALREADY_ERROR": "Задача уже завершилась с ошибкой",
+  "api.newsItemRecipientsExportTask.STATUS_IS_ALREADY_COMPLETED": "Задача уже успешно выполнена",
+  "api.newsItemRecipientsExportTask.STATUS_IS_ALREADY_ERROR": "Задача уже завершилась с ошибкой",
   "api.newsItem.EMPTY_VALID_BEFORE_DATE": "Дата актуальности новости обязательна",
   "api.newsItem.EDIT_DENIED_ALREADY_SENT": "Нельзя редактировать уже отправленную новость",
   "api.newsItem.EDIT_DENIED_PUBLISHED": "Нельзя редактировать опубликованную новость",
