feat(condo): DOMA-6516 miniapps in side menu (#3542)
* feat(condo): DOMA-6516 miniapps in menu

* feat(condo): DOMA-6516 TMP added way to show different modal

* feat(condo): DOMA-6516 menu categorization

* feat(condo): DOMA-6516 added missing translations

* fix(condo): DOMA-6516 fixed test pipeline

* fix(condo): DOMA-6516 fixed typo and default icon

* chore(condo): DOMA-6516 migrations rebase

--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -304,10 +304,11 @@
   "miniapp.loadingError.title": "Улучшаем сервис",
   "miniapp.loadingError.message": "Проводим технические работы. Зайдите, пожалуйста, немного позже",
   "miniapp.connectModal.Finished.title": "Сервис успешно подключен",
-  "miniapp.connectModal.Finished.message": "Найти новый сервис теперь можно в разделе «Подключенные». Закройте это окно и нажмите кнопку «Открыть», чтобы начать им пользоваться. Спасибо, что снова выбрали нас.",
+  "miniapp.connectModal.Finished.message": "Новый сервис появится во вкладке «Подключенные» в разделе «Сервисы». Чтобы начать им пользоваться, закройте это окно и нажмите «Открыть». Спасибо, что снова выбрали нас.",
+  "miniapp.connectModal.Finished.withIcon.title": "Сервис успешно подключен",
+  "miniapp.connectModal.Finished.withIcon.message": "Новый сервис появится в меню слева, а так же, останется во вкладке «Подключенные» в разделе «Сервисы». Чтобы начать им пользоваться, закройте это окно и нажмите «Открыть». Спасибо, что снова выбрали нас.",
   "miniapp.connectModal.InProgress.title": "Свяжемся с вами в ближайшее время",
   "miniapp.connectModal.InProgress.message": "Скоро специалисты отдела продаж и технической поддержки рассмотрят вашу заявку на подключение сервиса. Затем — напишут или перезвонят, чтобы уточнить детали.",
-  "miniapp.connectModal.InProgress.button": "Спасибо, что рассказали",
   "MinutesShort": "{minutes} мин.",
   "No": "Нет",
   "RolesAndAccess": "Роли и доступы",
