--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -304,10 +304,11 @@
   "miniapp.loadingError.title": "Improving service",
   "miniapp.loadingError.message": "We do technical work. Please come back a little later",
   "miniapp.connectModal.Finished.title": "The service is successfully connected",
-  "miniapp.connectModal.Finished.message": "You will now be able to find the new service under «Connected» tab. Close this window and click «Open» to start using it. Thank you for choosing us again.",
+  "miniapp.connectModal.Finished.message": "The new service will appear in the «Connected» tab in the «Services» section. To start using it, close this window and click «Open». Thank you for choosing us again.",
+  "miniapp.connectModal.Finished.withIcon.title": "The service is successfully connected",
+  "miniapp.connectModal.Finished.withIcon.message": "The new service will appear in the left menu, and will also remain in the «Connected» tab in the «Services» section. To start using it, close this window and click «Open». Thank you for choosing us again.",
   "miniapp.connectModal.InProgress.title": "We'll get back to you shortly",
   "miniapp.connectModal.InProgress.message": "The specialists of the sales and technical support department will consider your application to connect the service soon. Then they will write or call you back to clarify the details.",
-  "miniapp.connectModal.InProgress.button": "Thank you for telling me",
   "MinutesShort": "{minutes} min.",
   "No": "No",
   "RolesAndAccess": "Roles and accesses",
