--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1995,6 +1995,8 @@
   "billing.category.radio.name": "Радио",
   "billing.category.intercom.name": "Домофон",
   "billing.category.telecom.name": "Антенна",
+  "billing.category.heating.name": "Отопление",
+  "billing.category.membership_fee.name": "Членские взносы",
   "billing.category.housing.name.declined": "квартплату",
   "billing.category.repair.name.declined": "капремонт",
   "billing.category.electricity.name.declined": "электричество",
