feat(condo): DOMA-6537 Service provider billing section (#3560)
* feat(condo): DOMA-6537 Added verification step to acquiring

* fix(condo): DOMA-6537 allow only single context in active status

* feat(condo): DOMA-6537 Added front layer

* fix(condo): DOMA-6537 fixed const usage

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -256,6 +256,9 @@
   "accrualsAndPayments.setup.chooseBillingStep.title": "Selecting a billing",
   "accrualsAndPayments.setup.setupBillingStep.title": "Integration setup",
   "accrualsAndPayments.setup.setupAcquiringStep.title": "Acceptance of the offer",
+  "accrualsAndPayments.setup.verificationStep.title": "Verification",
+  "accrualsAndPayments.setup.verificationStep.message.title": "Verifying, please wait",
+  "accrualsAndPayments.setup.verificationStep.message.body": "Soon enough, our staff will verify your organization and residents will be able to pay receipts through the resident's Doma mobile app",
   "accrualsAndPayments.setup.noReturn": "At this point it is impossible to go back to this step",
   "accrualsAndPayments.setup.verificationNeeded.title": "Authorize via SberBusiness ID",
   "accrualsAndPayments.setup.verificationNeeded.message.certs": "To complete the integration setup, authorize via Sber. Authorization will only work with security certificates installed. Learn more about them {link}.",
