--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -256,6 +256,9 @@
   "accrualsAndPayments.setup.chooseBillingStep.title": "Выбор биллинга",
   "accrualsAndPayments.setup.setupBillingStep.title": "Настройка интеграции",
   "accrualsAndPayments.setup.setupAcquiringStep.title": "Акцепт оферты",
+  "accrualsAndPayments.setup.verificationStep.title": "Верификация",
+  "accrualsAndPayments.setup.verificationStep.message.title": "Верифицируем, подождите",
+  "accrualsAndPayments.setup.verificationStep.message.body": "В скором времени наши сотрудники верифицируют вашу организацию и жители смогут оплачивать квитанции через мобильное приложение жителя Doma",
   "accrualsAndPayments.setup.noReturn": "На данном этапе вернуться к этому шагу невозможно",
   "accrualsAndPayments.setup.verificationNeeded.title": "Авторизуйтесь через СберБизнес ID",
   "accrualsAndPayments.setup.verificationNeeded.message.certs": "Чтобы завершить настройку интеграции, авторизуйтесь через Сбер. Авторизация будет работать только с установленными сертификатами безопасности. Узнать подробнее о них можно {link}.",
