feat(condo): DOMA-6566 organization type selector (#3564)
* fix(ui): DOMA-6566 add defaultValue prop to RadioGroup

* feat(condo): DOMA-6566 Add organization type selector

* fix(featureflags): DOMA-6566 add default value

* fix(eps): DOMA-6566 transpile feature flags

* fix(condo): DOMA-6566 add userId in feature context

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -932,7 +932,6 @@
   "pages.condo.profile.chooseInterfaceLanguage": "Choose language",
   "pages.condo.profile.globalHints": "Hints in sections",
   "pages.index.PageTitle": "Analytics",
-  "pages.organizations.CreateOrganizationMessage": "Creating new organization",
   "pages.condo.analytics.index.PageTitle": "Analytics for supervisors",
   "pages.condo.analytics.TicketAnalyticsPage.PageTitle": "Ticket analytics",
   "pages.condo.analytics.TicketAnalyticsPage.HeaderButtonTitle": "Add custom report",
@@ -988,6 +987,8 @@
   "pages.organizations.tin.TooShortMessage": "TIN field must contain 10 digits",
   "pages.organizations.tin.InvalidValue": "TIN field value is not valid",
   "pages.organizations.PageTitle": "Organizations",
+  "pages.organizations.managingCompany": "Managing company",
+  "pages.organizations.serviceProvider": "Service provider",
   "pages.clientCard.Title": "Contact {phone}",
   "pages.clientCard.callRecordsLog": "Call records log",
   "pages.clientCard.showAllPropertyTickets": "Show all tickets at this property",
