--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -932,7 +932,6 @@
   "pages.condo.profile.chooseInterfaceLanguage": "Выберите язык интерфейса",
   "pages.condo.profile.globalHints": "Подсказки в разделах",
   "pages.index.PageTitle": "Аналитика",
-  "pages.organizations.CreateOrganizationMessage": "Давайте создадим вашу управляющую компанию",
   "pages.condo.analytics.index.PageTitle": "Аналитика для руководителей",
   "pages.condo.analytics.TicketAnalyticsPage.PageTitle": "Аналитика по заявкам",
   "pages.condo.analytics.TicketAnalyticsPage.HeaderButtonTitle": "Добавить свой отчет",
@@ -988,6 +987,8 @@
   "pages.organizations.tin.TooShortMessage": "ИНН должен содержать 10 символов",
   "pages.organizations.tin.InvalidValue": "Некорректное значение ИНН",
   "pages.organizations.PageTitle": "Организации",
+  "pages.organizations.managingCompany": "Управляющая организация",
+  "pages.organizations.serviceProvider": "РСО или РЦ",
   "pages.clientCard.Title": "Контакт {phone}",
   "pages.clientCard.callRecordsLog": "История звонков",
   "pages.clientCard.showAllPropertyTickets": "Все заявки по этому адресу",
